--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         <activity
             android:name=".presentation.screens.ride.RideListActivity"
             android:exported="false"
-            android:theme="@style/Theme.Carpool" />
+            android:theme="@style/Theme.App" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Carpool">
+            android:theme="@style/Theme.App">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
