--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Carpool"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.login.AuthActivity"
+            android:name=".chat.ChatActivity"
             android:exported="false"
             android:label="@string/title_activity_auth" />
         <activity
@@ -31,7 +31,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.screens.Login.SignWithGoogle" />
     </application>
 
 </manifest>
