--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.Carpool"
         tools:targetApi="31" >
         <activity
-            android:name=".chat.ChatActivity"
+            android:name=".presentation.screens.chat.ChatActivity"
             android:exported="false"
             android:label="@string/title_activity_auth" />
         <activity
